--- a/something.html
+++ b/something.html
@@ -9,8 +9,7 @@
 <body>
 
   <div class="content">
-    <h1>Hello, Welcome!</h1>
-    <p>This is a page with a beautiful background image.</p>
+    <h1>Are you Audrey Cho</h1>
   </div>
 
 </body>
