added yes and no

--- a/something.html
+++ b/something.html
@@ -25,7 +25,7 @@
     <div class="choice">
       <p>No</p>
       <a href="no.html">
-        <img src="images/download.png" alt="No Box">
+        <img src="images/red2.png" alt="No Box">
       </a>
     </div>
   </div>
