--- a/yes.html
+++ b/yes.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <!-- Full-screen overlay for red flash effect -->
+    <div id="flash-overlay"></div>
 
-    <!-- Question at the top -->
+    <!-- Question container -->
     <div class="yes-container">
         <h1>Which of these best describes you?</h1>
     </div>
