--- a/something.html
+++ b/something.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes or No</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Link to CSS -->
+    <!-- Shared CSS -->
 </head>
 
 <body>
-
     <div class="content">
         <h1>Are you Audrey Cho?</h1>
     </div>
@@ -32,7 +31,6 @@
             </a>
         </div>
     </div>
-
 </body>
 
 </html>
