yes page almost done

--- a/yes.html
+++ b/yes.html
@@ -5,20 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes Page</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Shared CSS -->
+    <!-- Include Playfair Display from Google Fonts if needed -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style-yes.css">
 </head>
 
 <body>
-    <!-- Full-screen overlay for red flash effect -->
-    <div id="flash-overlay"></div>
-
-    <!-- Question container -->
-    <div class="yes-container">
-        <h1>Which of these best describes you?</h1>
-    </div>
-
-    <!-- Answer choices -->
+    <!-- Answer Choices Container -->
     <div class="yes-choices">
         <button class="answer">Kind</button>
         <button class="answer">Smart</button>
@@ -28,7 +21,6 @@
     </div>
 
     <script src="script.js"></script>
-    <!-- JavaScript for Effects -->
 </body>
 
 </html>
