--- a/something.html
+++ b/something.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes or No</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Shared CSS -->
+    <link rel="stylesheet" href="style-index.css">
 </head>
 
 <body>
@@ -22,7 +21,6 @@
                 <img src="images/check.png" alt="Yes Box">
             </a>
         </div>
-
         <!-- No Box -->
         <div class="choice">
             <p>No</p>
