--- a/yes.html
+++ b/yes.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes Page</title>
-    <!-- Include Playfair Display from Google Fonts if needed -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style-yes.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yes Page</title>
+  <!-- Include Playfair Display from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style-yes.css">
 </head>
-
 <body>
-    <!-- Answer Choices Container -->
-    <div class="yes-choices">
-        <button class="answer">Kind</button>
-        <button class="answer">Smart</button>
-        <button class="answer">Funny</button>
-        <button class="answer">Loyal</button>
-        <button class="none">None of the Above</button>
-    </div>
+  <!-- Answer Choices Container -->
+  <div class="yes-choices">
+    <button class="answer">Not Kind</button>
+    <button class="answer">Not Smart</button>
+    <button class="answer">Not Funny</button>
+    <button class="answer">Not Loyal</button>
+    <button class="none">None of the Above</button>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
-
 </html>
