--- a/something.html
+++ b/something.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yes or No</title>
-  <link rel="stylesheet" href="style-index.css">
-</head>
-<body>
-  <div class="content">
-    <h1>Are you Audrey Cho?</h1>
-  </div>
 
-  <div class="choices">
-    <!-- Yes Box -->
-    <div class="choice">
-      <p>Yes</p>
-      <a href="yes.html">
-        <img src="images/check.png" alt="Yes Box">
-      </a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yes or No</title>
+    <link rel="stylesheet" href="style-something.css">
+</head>
+
+<body>
+    <!-- Question Box -->
+    <div class="content">
+        <h1>Are you Audrey Cho?</h1>
     </div>
-    <!-- No Box -->
-    <div class="choice">
-      <p>No</p>
-      <a href="no.html">
-        <img src="images/red2.png" alt="No Box">
-      </a>
+
+    <!-- Yes/No Buttons Container -->
+    <div class="choices">
+        <div class="choice">
+            <p>Yes</p>
+            <a href="yes.html">
+                <img src="images/check.png" alt="Yes Box">
+            </a>
+        </div>
+        <div class="choice">
+            <p>No</p>
+            <a href="no.html">
+                <img src="images/red2.png" alt="No Box">
+            </a>
+        </div>
     </div>
-  </div>
 </body>
+
 </html>
