--- a/no.html
+++ b/no.html
@@ -4,32 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes Page</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Link to CSS -->
+    <title>No Page</title>
+    <link rel="stylesheet" href="style-no.css">
 </head>
 
 <body>
-
-    <!-- Question at the top -->
-    <div class="question">
-        <h1>Which of these best describes you?</h1>
-    </div>
-
-    <!-- Answer choices -->
-    <div class="choices">
-        <button class="answer" onclick="flashRed()">Kind</button>
-        <button class="answer" onclick="flashRed()">Smart</button>
-        <button class="answer" onclick="flashRed()">Funny</button>
-        <button class="answer" onclick="flashRed()">Loyal</button>
-        <button class="none" onclick="showNarcissist()">None of the Above</button>
-    </div>
-
-    <!-- Narcissist Text (Initially Hidden) -->
-    <div id="narcissist-text">Narcissist</div>
-
-    <script src="script.js"></script>
-    <!-- Link JavaScript -->
+    <header>
+    </header>
 </body>
 
 </html>
